# forest

./: .gitignore  Cargo.toml  README.md  build.rs
.gitea/actions/setup-sqlite-db/: action.yaml
.gitea/workflows/: ci.yaml
.githooks/: pre-commit-lint
.github/workflows/: ci.yaml
completions/: _forest  _forest.ps1  forest.bash  forest.elv  forest.fish
forest_types/: Cargo.toml
forest_types/src/: lib.rs
src/: cli.rs  forest.rs  main.rs
src/forest/: ansi.rs  dbutils.rs  mod.rs  notetaking.rs  task.rs  timetracking.rs  tree.rs  types.rs
src/sql/: create_tables.sql
