[package]
name = "forest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["cargo"] }
edit = "0.1.5"
nanoid = "0.4.0"
prettyplease = "0.2.22"
regex = "1.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version="0.8.2", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
tokio = { version = "1.40.0", features = ["full"]}
xdg = "2.5.2"

[lints.rust]
# https://doc.rust-lang.org/rustc/lints/listing/allowed-by-default.html
# Example:
# unused_results = "warn"

[lints.clippy]
# https://doc.rust-lang.org/stable/clippy/lint_configuration.html
